# me433

./: README.md  blinky.c
HW10/: HW11-B_Cu.gbr  HW11-B_Mask.gbr  HW11-B_Paste.gbr  HW11-B_Silkscreen.gbr  HW11-Edge_Cuts.gbr  HW11-F_Cu.gbr  HW11-F_Mask.gbr  HW11-F_Paste.gbr  HW11-F_Silkscreen.gbr  HW11-job.gbrjob  HW11.kicad_pcb  HW11.kicad_prl  HW11.kicad_pro  ~HW11.kicad_sch.lck
HW11/: #auto_saved_files#  HW11.net  _autosave-HW11.kicad_sch  pic.py
HW12- PWM/: CMakeLists.txt  pwm.c
HW13- IMU/: CMakeLists.txt  main.c
HW14- DSP/: python_csv.py  python_plot_fir.py  python_plot_lowp_averagefilter.py  python_plot_lowp_averagefilter_iir.py  python_plot_part4.py
HW2/: CMakeLists.txt
HW3/: CMakeLists.txt  cdc.c
HW4/: CMakeLists.txt  spi.c
HW5- I2C IO/: CMakeLists.txt
HW5: I2C IO/: i2c.c
HW6/: font.h  ssd1306.c
HW6- I2C OLED/: CMakeLists.txt
HW7/: CMakeLists.txt  uart.c
HW7: UART/: ssd1306.h
HW9- UART/: CMakeLists.txt  ssd1306.c  zero.c
